--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"name": "XPather",
+	"name": "XPather2",
 	"short_name": "XPather",
-	"description": "Chrome extension for XPath operations on current document, reliable and easy to use with fully featured XPath 2.0 support.",
-	"author": "Bartek 'Simek' Kaszubowski",
-	"homepage_url": "https://github.com/Simek/XPather",
-	"version": "0.7.6",
+	"description": "Chrome extension for XPath operations on current document, reliable and easy to use with fully featured XPath 2.0 support. It also supports xpath normalization.",
+	"author": "Lazar Dilov",
+	"homepage_url": "https://github.com/ldilov/",
+	"version": "0.7.7",
 
 	"browser_action": {
 		"default_title": "Toggle XPather",
@@ -55,6 +55,7 @@
 			"js": [
 				"lib/jquery-2.1.4.min.js",
 				"lib/jquery.xpath-0.3.1.min.js",
+				"lib/jquery.expath.min.js",
 				"lib/jquery.scrollTo-2.1.1.min.js",
 				"lib/jquery.caret.js",
 				"lib/functions.js",
